@@ -14,10 +14,14 @@ cod-tools (unreleased)
   * Changed:
     - cif_validate:
       - the format of validation messages describing composite key
-        uniqueness violations. 
+        uniqueness violations.
     - COD::CIF::DDL::DDLm::Validate:
       - the format of validation messages describing composite key
-        uniqueness violations. 
+        uniqueness violations.
+    - COD::CIF::Data::AtomList:
+      - datablock_from_atom_array() adds '_atom_site_Cartn_*' CIF data
+        items if orthogonal coordinates are present instead of fractional
+        ones.
   * Fixed:
     - codcif:
       - preserving empty save frames.
